# LLM-Kitty

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  plugin_request.md
.github/workflows/: test.yml
deploy/docker/: Dockerfile
deploy/helm/kitty/: Chart.yaml  values.yaml
deploy/helm/kitty/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
deploy/nginx/: nginx.conf
src/kitty/: __init__.py  exceptions.py
src/kitty/assertions/: __init__.py  engine.py  guardrails.py
src/kitty/cache/: __init__.py  manager.py
src/kitty/cli/: __init__.py  main.py
src/kitty/cli/commands/: __init__.py  eval_commands.py
src/kitty/config/: __init__.py  loader.py
src/kitty/database/: __init__.py  models.py  session.py
src/kitty/matchers/: __init__.py
src/kitty/mcp/: __init__.py  server.py
src/kitty/pipeline/: __init__.py  evaluator.py
src/kitty/pipeline/rails/: __init__.py
src/kitty/providers/: __init__.py  base.py  echo.py  http.py  registry.py
src/kitty/providers/anthropic/: __init__.py  messages.py
src/kitty/providers/openai/: __init__.py  chat.py
src/kitty/redteam/: __init__.py
src/kitty/redteam/plugins/: __init__.py  base.py  manifest.py  registry.py
src/kitty/redteam/plugins/builtin/: __init__.py
src/kitty/redteam/plugins/builtin/foundation/: __init__.py  _manifest.yaml
src/kitty/redteam/strategies/: __init__.py  base.py  base64.py  jailbreak.py
src/kitty/scheduler/: __init__.py  rate_limiter.py
src/kitty/server/: __init__.py  app.py
src/kitty/storage/: __init__.py
src/kitty/tracing/: __init__.py  tracer.py
src/kitty/types/: __init__.py  config.py  eval.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_eval_pipeline.py
tests/unit/: test_assertions.py  test_cache.py  test_config.py  test_pipeline.py  test_provider_registry.py  test_scheduler.py  test_types.py
