[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitty-llm"
version = "0.1.0"
description = "LLM red-teaming framework — orchestrate, automate, and analyze adversarial evaluations across multiple model providers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "red-team", "security", "eval", "promptfoo"]
authors = [
    {name = "Kitty Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.10,<3",
    "pyyaml>=6.0",
    "httpx>=0.28,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "jinja2>=3.1",
    "typer>=0.15,<1",
    "rich>=13",
    "structlog>=24",
    "diskcache>=5",
    "openai>=1.0",
    "anthropic>=0.40",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    'redis>=5,<6; python_version >= "3.11"',
    "cryptography>=42",
    "python-multipart>=0.0.12",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-mock>=3",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=3",
    "pip-audit>=2",
    "bandit>=1.7",
]
mysql = [
    "aiomysql>=0.2",
]

[project.scripts]
kitty = "kitty.cli.main:app"

[project.entry-points."kitty.plugins"]
builtin = "kitty.redteam.plugins:discover"

[tool.hatch.build.targets.wheel]
packages = ["src/kitty"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/pyproject.toml", "/README.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PT", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
enable_error_code = ["ignore-without-code", "redundant-self", "truthy-iterable"]
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
minversion = "8.0"

[tool.coverage.run]
source = ["kitty"]
fail_under = 85
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B105", "B108"]
